--- a/Lab12/Views/Articles/Details.cshtml
+++ b/Lab12/Views/Articles/Details.cshtml
@@ -41,5 +41,6 @@
 </div>
 <div>
     <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Back to List</a> |
+    <a asp-controller="Checkout" asp-action="AddItem" asp-route-id="@Model.Id">Add to checkout</a>
 </div>
