--- a/Lab12/Views/Shop/Index.cshtml
+++ b/Lab12/Views/Shop/Index.cshtml
@@ -61,7 +61,8 @@
                     <td>
                         <a asp-controller="Articles" asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
                         <a asp-controller="Articles" asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                        <a asp-controller="Articles" asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                        <a asp-controller="Articles" asp-action="Delete" asp-route-id="@item.Id">Delete</a> |
+                        <a asp-controller="Checkout" asp-action="AddItem" asp-route-id="@item.Id">Add</a>
                     </td>
                 </tr>
             }
