--- a/Lab12/Views/Checkout/Index.cshtml
+++ b/Lab12/Views/Checkout/Index.cshtml
@@ -73,5 +73,8 @@
             </table>
         }
     </div>
+    <div class="row">
+        <a asp-action="Summary">Summary</a>
+    </div>
 </div>
 
